# Db_app

db_app/: pyproject.toml
db_app/db_app/: connection.py  create_tables.py  drop_tables.py  insert_data.py  main.py
db_app/db_app/sql_scripts/: create_tables.sql  drop_tables.sql  query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
